test_suite/alan-2022-examples/failing/008480_mutation.alan
source ZO3 function s() to put boolean begin relax end begin relax end
